--- a/Changelog.txt
+++ b/Changelog.txt
@@ -23,6 +23,54 @@
 # - title by author
 # }}}
 
+{{{ 5.14.0 2021-03-26
+
+:: new features
+
+- Edit book: When right clicking on a class in a HTML file, add an option to rename the class throughout the book
+
+- [1919103] Adding from ISBN: Add an option to check if there are existing books with the specified ISBNs already in the library
+
+- [1920576] Template tester: Instead of next/last, the template tester now shows the template values for selected books
+
+- [1918047] Content server: Allow swiping left and right to show next/previous book on the book details page
+
+- [1919072] E-book viewer: Make the commonly used shift+arrow key shortcuts for modifying selections using the keyboard work. Also add shorcuts for selecting by character, line and paragraph.
+
+:: bug fixes
+
+- [1920613] MOBI Output: Fix latest kindle firmware not displaying select publisher font option for calibre produced azw3 files
+
+- [1919033] E-book viewer: Fix errors when viewing books with mathematics that are split over multiple internal files
+
+- [1918436] Content server viewer: Fix highlights not sorted correctly in the highlights panel
+
+- [1918737] Get books: Fix smashwords plugin not working because of website changes
+
+- [1920733] Improve the performance of QuickView especially when using composite columns
+
+- [1918428] Improve performance of the virtual_libraries() template function
+
+- [1920250] Browser viewer: Fix Go to Location not working for positions
+
+- [1905257] E-book viewer: Fix searching in the Table of Contents not working
+
+- [1918105] E-book viewer: In paged mode, fix scrolling not working correctly when margins are set to zero
+
+- [1918437] E-book viewer: Fix incorrect ToC navigation in books that link the entries to inline tags that wrap block tags that span multiple pages
+
+- [1920592] Category editor: Searching in library shouldn't automatically opens Quickview
+
+- [1919260] Conversion: Fix a hang caused by long sequences of non-word characters when heuristics are enabled, either explicitly or for some input formats such as TXT
+
+- Fix a regression in calibre 5 that broke --explode-book and --implode-book actions for calibre-debug.exe
+
+- Fix a regression in calibre 5 that broke setting metadata in RTF files
+
+:: new recipes
+- ZackZack.at by Dirk Gomez
+}}}
+
 {{{ 5.13.0 2021-03-10
 
 :: new features
